# qa-auto-engineer-python-project-241

./: .gitignore  Makefile  README.md  demo.cast  gendiff.py  pyproject.toml  sonar-project.properties
.github/workflows/: python-ci.yml
gendiff/: __init__.py  diff.py  parser.py
gendiff/formatters/: json.py
gendiff/scripts/: gendiff.py
hexlet_code/: __init__.py  diff.py
hexlet_code/formatters/: json.py  plain.py  stylish.py
hexlet_code/scripts/: gendiff.py
tests/: test_diff.py
tests/test_data/: json_expected.txt
