[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.17",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "gendiff",
    "gendiff.formatters",
    "gendiff.scripts",
]

